--- a/ansible.yml
+++ b/ansible.yml
@@ -1,11 +1,9 @@
 - hosts: all
-  become: true
-  tasks: 
-     - name: delete old deployment
-       command: kubectl delete -f /home/ubuntu/Deployment.yml
-     - name: delete old service
-       command: kubectl delete -f /home/ubuntu/Service.yml
+  #become: true
+  user: ubuntu
+  tasks:
      - name: create new deployment
        command: kubectl apply -f /home/ubuntu/Deployment.yml
      - name: create new service
-       command: kubectl apply -f /home/ubuntu/Service.yml
+       command: kubectl apply -f /home/ubuntu/service.yml
+
