--- a/service.yml
+++ b/service.yml
@@ -8,7 +8,8 @@ spec:
   ports:
     - port: 8080                               
       targetPort: 80                    
-      nodePort: 31200
+      nodePort: 30994
   selector:
     app: mrdevops                    
-  type: LoadBalancer                   
+  type: NodePort
+                   
